--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-spring.datasource.url=jdbc:h2:men
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+#spring.datasource.url=jdbc:h2:men
+spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.driveClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.port=8082
+spring.jpa.hibernate.ddl-auto=update
 
 
